# LayoutGKN

./: README.md  cfg.yaml  pyproject.toml
conf/: default.yaml
data/msd/: README.md
data/rplan/: README.md
models/: README.md
notebks/: README.md
notebooks/: nb nx to pyg.ipynb  nb rplan to graph.ipynb  nb triplet mining.ipynb
scripts/: generate_triplets.py  gh_similarity.py  nx_to_pyg.py  rplan_to_graph.py  run.py
src/LayoutGKN/: config.py  constants.py  data.py  loss.py  metrics.py  model.py  plot.py  train.py  utils.py
