[project]
name = "LayoutGKN"
version = "0.1.0"
requires-python = ">=3.8"
description = "LayoutGKN: Graph Similarity Learning of Floor Plans"
readme = "README.md"

dependencies = [
  "pandas",
  "scikit-learn",
  "matplotlib",
  "seaborn",
  "numpy<2",
  "networkx",
  "Pillow",
  "omegaconf",
  "shapely",
  "notebook",
  "wandb",
  "grakel",
  "rasterio",
  "opencv-python"
  # NOTE: torch*, torch_* moved to extras below
]

[project.optional-dependencies]
accel-torch = [
  "torch==2.8.*",
  "torchvision==0.23.*",
]

accel-pyg = [
  "torch-geometric>=2.5",
  "torch-scatter>=2.1",
  "torch-sparse>=0.6",
  "torch-cluster>=1.6",
  "torch-spline-conv>=1.2",
  "pyg-lib>=0.3"
]

[tool.setuptools]
packages = ["LayoutGKN"]
package-dir = {"" = "src"}


# macOS or any CPU-only install (works on macOS/Windows/Linux)
#uv pip install ".[torch-core,pyg-core]" \
#  --index-url https://pypi.org/simple \
#  -f https://data.pyg.org/whl/torch-2.8.0+cpu.html


# NVIDIA CUDA (Windows or Linux) — pick your CUDA version
#uv pip install ".[torch-core,pyg-core]" \
#  --index-url https://pypi.org/simple \
#  --extra-index-url https://download.pytorch.org/whl/cu128 \
#  -f https://data.pyg.org/whl/torch-2.8.0+cu128.html