[project]
name = "LayoutGKN"
version = "0.1.0"
requires-python = ">=3.8"
description = "LayoutGKN: Graph Similarity Learning of Floor Plans"
readme = "README.md"

dependencies = [
  "pandas",
  "scikit-learn",
  "matplotlib",
  "seaborn",
  "numpy<2",
  "networkx",
  "Pillow",
  "omegaconf",
  "shapely",
  "notebook",
  "wandb",
  "grakel",
  "rasterio",
  "opencv-python",
  "torch==2.8.*",
  "torchvision==0.23.*"
]

[tool.setuptools]
packages = ["LayoutGKN"]
package-dir = {"" = "src"}